--- a/gayathri/tem4/task3.html
+++ b/gayathri/tem4/task3.html
@@ -7,34 +7,32 @@
     <link rel="stylesheet" href="style3.css">
     <title>Document</title>
 </head>
-
 <body>
-    <div class="margin padding bgcolor1 margin_auto width text_indent bgcolor">Page Header</div>
-    <div class="margin padding bgcolor1 margin_auto width text_indent">Nav</div>
+    <div class="padding bgcolor1 margin_auto width text_indent">Page Header</div>
+    <div class="padding bgcolor1 margin_auto width text_indent">Nav</div>
     <div class="margin padding margin_auto width text_indent">
-        <div class="">
-            <div class="float_left width68 ">
+        <div>
+            <div class="float_left width68">
                 <div class="bgcolor1 padding">
                     <div class="text_center padding">Article</div>
-                    <div class="margin padding bgcolor2 margin_auto width text_indent">Article Header</div>
-                    <div class="margin padding3 bgcolor2 margin_auto width text_indent">Main</div>
+                    <div class="padding bgcolor2 margin_auto width text_indent">Article Header</div>
+                    <div class="padding3 bgcolor2 margin_auto width text_indent">Main</div>
                 </div>
-
-                <div class="border padding bgcolor1  text_indent bgcolor1">Section</div>
+                <div class="border padding margin_auto text_indent bgcolor1">Section</div>
             </div>
+         
             <div class="float_right width30 aside_container">
                 <div class="aside_left width48 height1">
-                    <div class="margin padding3 bgcolor1 aside_contentA">Aside</div>
+                    <div class="padding3 bgcolor1 aside_contentA">Aside</div>
                 </div>
                 <div class="aside_right width48">
-                    <div class="margin padding3 bgcolor1 aside_contentA">Aside</div>
+                    <div class="padding3 bgcolor1 aside_contentA">Aside</div>
                 </div>
-                <div class="margin padding bgcolor1 third_aside aside_contentB">Aside</div>
+                <div class="padding bgcolor1 third_aside aside_contentB">Aside</div>
             </div>
             <div style="clear: both;"></div>
         </div>
-    </div>
-    <div class="margin padding bgcolor1 margin_auto width text_indent">Footer</div>
+     </div>
+     <div class="padding bgcolor1 margin_auto width text_indent">Footer</div>
 </body>
-
 </html>
