--- a/gayathri/tem4/task3.html
+++ b/gayathri/tem4/task3.html
@@ -8,31 +8,33 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="padding bgcolor1 margin_auto width text_indent">Page Header</div>
-    <div class="padding bgcolor1 margin_auto width text_indent">Nav</div>
-    <div class="margin padding margin_auto width text_indent">
-        <div>
+    <div class="margin_auto width">
+        <div class="padding bgcolor1 margin width text_indent">Page Header</div>
+    <div class="padding bgcolor1 margin width text_indent">Nav</div>
+    <div class="margin width text_indent">        
             <div class="float_left width68">
-                <div class="bgcolor1 padding">
+                <div class="bgcolor1 margin">
                     <div class="text_center padding">Article</div>
-                    <div class="padding bgcolor2 margin_auto width text_indent">Article Header</div>
-                    <div class="padding3 bgcolor2 margin_auto width text_indent">Main</div>
+                    <div class="padding bgcolor2 margin  margin_auto width text_indent">Article Header</div>
+                    <div class="padding3 bgcolor2 margin margin_auto width text_indent">Main</div>
                 </div>
-                <div class="border padding margin_auto text_indent bgcolor1">Section</div>
-            </div>
-         
+                <div class="border padding text_indent bgcolor1">Section</div>
+            </div>         
             <div class="float_right width30 aside_container">
-                <div class="aside_left width48 height1">
+               <div class="margin">
+                <div class="float_left width48 height1">
                     <div class="padding3 bgcolor1 aside_contentA">Aside</div>
                 </div>
-                <div class="aside_right width48">
+                <div class="float_right width48">
                     <div class="padding3 bgcolor1 aside_contentA">Aside</div>
                 </div>
+                <div style="clear: both;"></div>
+               </div>
                 <div class="padding bgcolor1 third_aside aside_contentB">Aside</div>
             </div>
-            <div style="clear: both;"></div>
-        </div>
+            <div style="clear: both;"></div>        
      </div>
-     <div class="padding bgcolor1 margin_auto width text_indent">Footer</div>
+     <div class="padding bgcolor1 margin width text_indent">Footer</div>
+    </div>
 </body>
 </html>
