--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -13,20 +13,22 @@
 
   <div class="bg_color4 font_f">
     <header class="bg_color1">
-      <div class="width_a margin_a">
+      <div class="width_a margin_a padding">
         <div class="float_left width_l1">
-          <div class="float_left width_l1">
-            <img src="img_g.jpeg" alt="Guitar" height="100px" width="100%">
+         <div>
+          <div class="float_left width_25">
+            <img src="img_g.jpeg" alt="Guitar" height="50px" width="50%">
           </div>
           <div class="float_right width_r1">
-            <div class="padding font_size bg_color">SoundAMP</div>
+            <div class="font_size bg_color">SoundAMP</div>
           </div>
           <div style="clear: both;"></div>
+         </div>
         </div>
-        <div class="padding">
+        <div class="">
           <div class="float_right width_right">
             <div class="float_left width_l2">
-              <div class="font">
+              <div class="font" style="text-align: right;">
                 <a href class="bg_color">HTML Templates</a>
                 <i class="fa-solid fa-caret-down margin_r bg_color"></i>
                 <a href class="bg_color">More HTML Templates</a>
@@ -34,7 +36,7 @@
                 <div class="button text_align ">DOWNLOAD NOW</div>
               </div>
             </div>
-            <div class="padding1">
+            
               <div class="float_right width_r2">
                 <i class="fa-brands fa-square-youtube margin_r"></i>
                 <i class="fa-brands fa-facebook-f margin_r"></i>
@@ -44,7 +46,7 @@
                 <i class="fa-brands fa-instagram margin_r"></i>
                 <i class="fa-brands fa-twitter "></i>
               </div>
-            </div>
+            
             <div style="clear: both;"></div>
           </div>
           <div style="clear: both;"></div>
