--- a/vigneshwaran/float/index.html
+++ b/vigneshwaran/float/index.html
@@ -10,11 +10,13 @@
     <div class="text border margin padding">HEADER</div>
     <div class="text border margin padding">NAVIGATION</div>
     <div class="margin">
-        <div class="float_left width text border margin padding">SECTION</div>
-        <div class="float_left width text border margin padding">ARTICLES</div>
-    </div>
-    <div class="margin">
-        <div class="float_right width_right text border margin padding">ASIDE</div>
+        <div class="float_left width">
+            <div class="text border padding margin">SECTION</div>
+            <div class="text border padding">ARTICLES</div>
+        </div>
+        <div class="float_right width_right">
+            <div class="text border padding1">ASIDE</div>            
+        </div>
         <div style="clear: both;"></div>
     </div>
     <div class="text border margin padding">FOODER</div>
