--- a/gayathri/tem4/task3.html
+++ b/gayathri/tem4/task3.html
@@ -8,31 +8,33 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="padding bgcolor1 margin_auto width text_indent">Page Header</div>
-    <div class="padding bgcolor1 margin_auto width text_indent">Nav</div>
-    <div class="margin padding margin_auto width text_indent">
-        <div>
-            <div class="float_left width68">
-                <div class="bgcolor1 padding">
-                    <div class="text_center padding">Article</div>
-                    <div class="padding bgcolor2 margin_auto width text_indent">Article Header</div>
-                    <div class="padding3 bgcolor2 margin_auto width text_indent">Main</div>
-                </div>
-                <div class="border padding margin_auto text_indent bgcolor1">Section</div>
-            </div>
-         
-            <div class="float_right width30 aside_container">
-                <div class="aside_left width48 height1">
-                    <div class="padding3 bgcolor1 aside_contentA">Aside</div>
-                </div>
-                <div class="aside_right width48">
-                    <div class="padding3 bgcolor1 aside_contentA">Aside</div>
-                </div>
-                <div class="padding bgcolor1 third_aside aside_contentB">Aside</div>
-            </div>
-            <div style="clear: both;"></div>
-        </div>
-     </div>
-     <div class="padding bgcolor1 margin_auto width text_indent">Footer</div>
+   <div class="margin_auto width">
+      <div class="padding bgcolor1 margin text_indent">Page Header</div>
+      <div class="padding bgcolor1 margin text_indent">Nav</div>
+      <div class="margin width text_indent">
+              <div class="float_left width68">
+                  <div class="bgcolor1 margin padding">
+                      <div class="text_center padding">Article</div>
+                      <div class="margin border width90 margin_auto padding text_indent bgcolor2">Article Header</div>
+                      <div class="margin border width90 margin_auto padding6 text_indent bgcolor2">Main</div>
+                  </div>
+                  <div class="padding7 margin_auto text_indent bgcolor1">Section</div>
+              </div>
+              <div class="float_right width30 aside_container">
+                  <div class="margin">
+                     <div class="float_left width48">
+                        <div class="padding3 bgcolor1">Aside</div>
+                    </div>
+                    <div class="float_right width48">
+                        <div class="padding3 bgcolor1">Aside</div>
+                    </div>
+                  <div style="clear: both;"></div>
+                  </div>
+                    <div class="padding6 bgcolor1 third_aside aside_contentB">Aside</div>
+              </div>
+              <div style="clear: both;"></div>
+       </div>
+       <div class="padding bgcolor1 margin width text_indent">Footer</div>
+   </div>
 </body>
 </html>
