--- a/gayathri/tem4/task3.html
+++ b/gayathri/tem4/task3.html
@@ -7,65 +7,36 @@
     <link rel="stylesheet" href="style3.css">
     <title>Document</title>
 </head>
+
 <body>
-<<<<<<< HEAD
-   <div class="margin_auto width">
-      <div class="padding bgcolor1 margin text_indent">Page Header</div>
-      <div class="padding bgcolor1 margin text_indent">Nav</div>
-      <div class="margin width text_indent">
-              <div class="float_left width68">
-                  <div class="bgcolor1 margin padding">
-                      <div class="text_center padding">Article</div>
-                      <div class="margin border width90 margin_auto padding text_indent bgcolor2">Article Header</div>
-                      <div class="margin border width90 margin_auto padding6 text_indent bgcolor2">Main</div>
-                  </div>
-                  <div class="padding7 margin_auto text_indent bgcolor1">Section</div>
-              </div>
-              <div class="float_right width30 aside_container">
-                  <div class="margin">
-                     <div class="float_left width48">
-                        <div class="padding3 bgcolor1">Aside</div>
-                    </div>
-                    <div class="float_right width48">
-                        <div class="padding3 bgcolor1">Aside</div>
-                    </div>
-                  <div style="clear: both;"></div>
-                  </div>
-                    <div class="padding6 bgcolor1 third_aside aside_contentB">Aside</div>
-              </div>
-              <div style="clear: both;"></div>
-       </div>
-       <div class="padding bgcolor1 margin width text_indent">Footer</div>
-   </div>
-=======
     <div class="margin_auto width">
         <div class="padding bgcolor1 margin width text_indent">Page Header</div>
-    <div class="padding bgcolor1 margin width text_indent">Nav</div>
-    <div class="margin width text_indent">        
+        <div class="padding bgcolor1 margin width text_indent">Nav</div>
+        <div class="margin width text_indent">
             <div class="float_left width68">
-                <div class="bgcolor1 margin">
-                    <div class="text_center padding">Article</div>
-                    <div class="padding bgcolor2 margin  margin_auto width text_indent">Article Header</div>
-                    <div class="padding3 bgcolor2 margin margin_auto width text_indent">Main</div>
+                <div class="bgcolor1 margin padding">
+                    <div class="text_center margin">Article</div>
+                    <div class="padding bgcolor2 marginn margin_auto width text_indent">Article Header</div>
+                    <div class="padding3 bgcolor2 marginn margin_auto width text_indent">Main</div>
                 </div>
                 <div class="border padding text_indent bgcolor1">Section</div>
-            </div>         
+            </div>
             <div class="float_right width30 aside_container">
-               <div class="margin">
-                <div class="float_left width48 height1">
-                    <div class="padding3 bgcolor1 aside_contentA">Aside</div>
+                <div class="margin">
+                    <div class="float_left width48 height1">
+                        <div class="padding3 bgcolor1 aside_contentA">Aside</div>
+                    </div>
+                    <div class="float_right width48">
+                        <div class="padding3 bgcolor1 aside_contentA">Aside</div>
+                    </div>
+                    <div style="clear: both;"></div>
                 </div>
-                <div class="float_right width48">
-                    <div class="padding3 bgcolor1 aside_contentA">Aside</div>
-                </div>
-                <div style="clear: both;"></div>
-               </div>
                 <div class="padding bgcolor1 third_aside aside_contentB">Aside</div>
             </div>
-            <div style="clear: both;"></div>        
-     </div>
-     <div class="padding bgcolor1 margin width text_indent">Footer</div>
+            <div style="clear: both;"></div>
+        </div>
+        <div class="padding bgcolor1 margin width text_indent">Footer</div>
     </div>
->>>>>>> 6387a4b4081580fdc0c4aa7f96e4c6bcca0768eb
 </body>
+
 </html>
