--- a/gayathri/tem4/task2.html
+++ b/gayathri/tem4/task2.html
@@ -7,20 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="margin_auto width margin padding">
+    <div class="margin_auto width  padding">
         <div class="padding margin text_indent bgcolor">Page Header</div>
         <div class="padding margin text_indent bgcolor">Nav</div>
-       <div>
+       <div class="margin">
          <div class="float_left width68 bgcolor">
-            <div class="margin padding text_indent">Article</div>
-            <div class="margin border width90 margin_auto padding bgcolor1 text_indent">Article Header</div>
-            <div class="margin border width90 margin_auto padding6 bgcolor1 text_indent">Main</div>
+            <div class="padding">
+                <div class="margin padding text_indent">Article</div>
+                <div class="margin border width90 margin_auto padding bgcolor1 text_indent">Article Header</div>
+                <div class="margin border width90 margin_auto padding6 bgcolor1 text_indent">Main</div>
+            </div>
          </div> 
          <div class="float_right width30"> 
             <div class="padding7 bgcolor margin text_indent">Aside</div>
          </div>
+         <div style="clear: both;"></div>
        </div>
-    <div style="clear: both;"></div>
+   
     <div class="padding8 margin text_indent bgcolor">Section</div>
     <div class="padding margin text_indent bgcolor">Footer</div>
     </div>
