--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -13,42 +13,40 @@
 
   <div class="bg_color4 font_f">
     <header class="bg_color1">
-      <div class="width_a margin_a">
+      <div class="width_a margin_a padding">
         <div class="float_left width_l1">
-          <div class="float_left width_l1">
-            <img src="img_g.jpeg" alt="Guitar" height="100px" width="100%">
-          </div>
-          <div class="float_right width_r1">
-            <div class="padding font_size bg_color">SoundAMP</div>
-          </div>
-          <div style="clear: both;"></div>
-        </div>
-        <div class="padding">
-          <div class="float_right width_right">
-            <div class="float_left width_l2">
-              <div class="font">
-                <a href class="bg_color">HTML Templates</a>
-                <i class="fa-solid fa-caret-down margin_r bg_color"></i>
-                <a href class="bg_color">More HTML Templates</a>
-                <i class="fa-solid fa-caret-down  margin_r bg_color"></i>
-                <div class="button text_align ">DOWNLOAD NOW</div>
-              </div>
+          <div>
+            <div class="float_left width_25">
+              <img src="img_g.jpeg" alt="Guitar" height="50px" width="50%">
             </div>
-            <div class="padding1">
-              <div class="float_right width_r2">
-                <i class="fa-brands fa-square-youtube margin_r"></i>
-                <i class="fa-brands fa-facebook-f margin_r"></i>
-                <i class="fa-brands fa-google-plus margin_r"></i>
-                <i class="fa-brands fa-linkedin margin_r"></i>
-                <i class="fa-brands fa-pinterest margin_r"></i>
-                <i class="fa-brands fa-instagram margin_r"></i>
-                <i class="fa-brands fa-twitter "></i>
-              </div>
+            <div class="float_right width_r1">
+              <div class="font_size bg_color">SoundAMP</div>
             </div>
             <div style="clear: both;"></div>
           </div>
+        </div>
+        <div class="float_right width_right">
+          <div class="float_left width_l2 padding1 ">
+            <div class="font" style="text-align: right;">
+              <a href class="bg_color">HTML Templates</a>
+              <i class="fa-solid fa-caret-down margin_r bg_color"></i>
+              <a href class="bg_color">More HTML Templates</a>
+              <i class="fa-solid fa-caret-down  margin_r bg_color"></i>
+              <div class="button text_align ">DOWNLOAD NOW</div>
+            </div>
+          </div>
+          <div class="float_right width_r2 padding2">
+            <i class="fa-brands fa-square-youtube margin_r"></i>
+            <i class="fa-brands fa-facebook-f margin_r"></i>
+            <i class="fa-brands fa-google-plus margin_r"></i>
+            <i class="fa-brands fa-linkedin margin_r"></i>
+            <i class="fa-brands fa-pinterest margin_r"></i>
+            <i class="fa-brands fa-instagram margin_r"></i>
+            <i class="fa-brands fa-twitter "></i>
+          </div>
           <div style="clear: both;"></div>
         </div>
+        <div style="clear: both;"></div>
       </div>
     </header>
     <div class="width_b margin_a">
@@ -89,9 +87,9 @@
             <div class="font_color">10/04/2018 <br></div>
             <div class="font_size2 padding6">DJ-Master Class <br></div>
             <div class="font_color">#dj #master-class <br></div>
-            <div class="padding6 linespacing font_color">DJ woodsmell will teach you new tricks: please sign up. <br>
+            <div class="padding6 linespacing font_color">DJ woodsmell will teach you new tricks: please sign up.<br>
             </div>
-            <div class="button1 text_align width_a margin_a margin_2">See more...</div>
+            <div class="button1 text_align width_a margin_a margin_3">See more...</div>
           </div>
         </div>
       </div>
