--- a/gayathri/tem4/task2.html
+++ b/gayathri/tem4/task2.html
@@ -12,15 +12,17 @@
         <div class="padding margin text_indent bgcolor">Nav</div>
        <div>
          <div class="float_left width68 bgcolor">
-            <div class="margin padding text_indent">Article</div>
-            <div class="margin border width90 margin_auto padding bgcolor1 text_indent">Article Header</div>
-            <div class="margin border width90 margin_auto padding6 bgcolor1 text_indent">Main</div>
+           <div class="padding margin1">
+            <div class="text_indent">Article</div>
+            <div class="margin1 width90 margin_auto padding bgcolor1 text_indent">Article Header</div>
+            <div class="width90 margin_auto padding6 bgcolor1 text_indent">Main</div>
+           </div>
          </div> 
          <div class="float_right width30"> 
             <div class="padding7 bgcolor margin text_indent">Aside</div>
          </div>
+       <div style="clear: both;"></div>
        </div>
-    <div style="clear: both;"></div>
     <div class="padding8 margin text_indent bgcolor">Section</div>
     <div class="padding margin text_indent bgcolor">Footer</div>
     </div>
