--- a/gayathri/tem4/task3.html
+++ b/gayathri/tem4/task3.html
@@ -8,15 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="margin_auto width">
+   <div class="margin_auto width">
       <div class="padding bgcolor1 margin text_indent">Page Header</div>
       <div class="padding bgcolor1 margin text_indent">Nav</div>
-      <div class="margin width text_indent">
+      <div class="margin text_indent">
               <div class="float_left width68">
-                  <div class="bgcolor1 margin paddding">
+                  <div class="bgcolor1 margin padding">
                       <div class="text_center padding">Article</div>
-                      <div class="margin border width90 margin_auto padding text_indent bgcolor2">Article Header</div>
-                      <div class="margin border width90 margin_auto padding6 text_indent bgcolor2">Main</div>
+                      <div class="margin1 width90 margin_auto padding text_indent bgcolor2">Article Header</div>
+                      <div class="margin1 width90 margin_auto padding6 text_indent bgcolor2">Main</div>
                   </div>
                   <div class="padding7 margin_auto text_indent bgcolor1">Section</div>
               </div>
@@ -28,13 +28,13 @@
                     <div class="float_right width48">
                         <div class="padding3 bgcolor1">Aside</div>
                     </div>
-                  <div style="clear: both;"></div>
+                    <div style="clear: both;"></div>
                   </div>
-                    <div class="padding6 bgcolor1 margin">Aside</div>
-              </div>
-              <div style="clear: both;"></div>
+                  <div class="padding6 bgcolor1">Aside</div>
+             </div>
+             <div style="clear: both;"></div>
        </div>
-       <div class="padding bgcolor1 margin width text_indent">Footer</div>
+       <div class="padding bgcolor1 margin text_indent">Footer</div>
    </div>
 </body>
 </html>
