--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -15,15 +15,6 @@
     <header class="bg_color1">
       <div class="width_a margin_a padding">
         <div class="float_left width_l1">
-<<<<<<< HEAD
-          <div>
-            <div class="float_left width_25">
-              <img src="img_g.jpeg" alt="Guitar" height="50px" width="50%">
-            </div>
-            <div class="float_right width_r1">
-              <div class="font_size bg_color">SoundAMP</div>
-            </div>
-=======
          <div>
           <div class="float_left width_25">
             <img src="img_g.jpeg" alt="Guitar" height="50px" width="50%">
@@ -56,11 +47,10 @@
                 <i class="fa-brands fa-twitter "></i>
               </div>
             
->>>>>>> 4a62af2bbd149ec6720206b12d96f798610f32d1
             <div style="clear: both;"></div>
           </div>
         </div>
-        <div class="float_right width_right">
+        <!-- <div class="float_right width_right">
           <div class="float_left width_l2 padding1 ">
             <div class="font" style="text-align: right;">
               <a href class="bg_color">HTML Templates</a>
@@ -69,8 +59,8 @@
               <i class="fa-solid fa-caret-down  margin_r bg_color"></i>
               <div class="button text_align ">DOWNLOAD NOW</div>
             </div>
-          </div>
-          <div class="float_right width_r2 padding2">
+          </div> -->
+          <!-- <div class="float_right width_r2 padding2">
             <i class="fa-brands fa-square-youtube margin_r"></i>
             <i class="fa-brands fa-facebook-f margin_r"></i>
             <i class="fa-brands fa-google-plus margin_r"></i>
@@ -78,7 +68,7 @@
             <i class="fa-brands fa-pinterest margin_r"></i>
             <i class="fa-brands fa-instagram margin_r"></i>
             <i class="fa-brands fa-twitter "></i>
-          </div>
+          </div> -->
           <div style="clear: both;"></div>
         </div>
         <div style="clear: both;"></div>
