--- a/sarupriya/JavaScript/index.html
+++ b/sarupriya/JavaScript/index.html
@@ -16,14 +16,32 @@
     <div>
         <button type="button" onclick='document.getElementById("demo").style.fontSize="35px"'>Click Me1</button>
     </div>
+    <div id="demo3">HIDE</div>
     <div>
-        <button type="button" onclick='document.getElementById("demo").style.display="none"'>Click Me1</button>
+        <button type="button" onclick='document.getElementById("demo3").style.display="none"'>Click Me2</button>
     </div>
     <div>
-        <div>Java Script is easy to understand</div>
         <div id="demo1" style="display: none;">Hello JS!</div>
         <button type="button" onclick='document.getElementById("demo1").style.display="block"'>Click Me1</button>
     </div>
+    <div id="demo2">Java Script is easy to understand</div>
+    <button type="button" onclick="myFunction()">Try it</button>
+    <script src="script.js"></script>
+    <div id="demo4">Example of file path link</div>
+    <button type="button" onclick="myFunction1()">Try it yourself</button>
+    <script src="D:\training\sarupriya\JavaScript"></script>
+    <script>
+        document.write(15 + 25);
+    </script>
+    <button type="button" onclick="document.write(5 + 6)">Try it</button>
+    <script>
+        window.alert("welcome to all");
+    </script>
+    <script>
+        alert("welcome javascript developer");
+    </script>
+
+    <button onclick="window.print()">Print this page</button>
 </body>
 
 </html>
