--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -13,64 +13,23 @@
 
   <div class="bg_color4 font_f">
     <header class="bg_color1">
-      <div class="width_a margin_a padding">
-        <div class="float_left width_l1">
-<<<<<<< HEAD
-          <div>
-            <div class="float_left width_25">
-              <img src="img_g.jpeg" alt="Guitar" height="50px" width="50%">
-            </div>
-            <div class="float_right width_r1">
-              <div class="font_size bg_color">SoundAMP</div>
-            </div>
-=======
-         <div>
-          <div class="float_left width_25">
-            <img src="img_g.jpeg" alt="Guitar" height="50px" width="50%">
-          </div>
-          <div class="float_right width_r1">
-            <div class="font_size bg_color">SoundAMP</div>
-          </div>
-          <div style="clear: both;"></div>
-         </div>
-        </div>
-        <div class="">
-          <div class="float_right width_right">
-            <div class="float_left width_l2">
-              <div class="font" style="text-align: right;">
-                <a href class="bg_color">HTML Templates</a>
-                <i class="fa-solid fa-caret-down margin_r bg_color"></i>
-                <a href class="bg_color">More HTML Templates</a>
-                <i class="fa-solid fa-caret-down  margin_r bg_color"></i>
-                <div class="button text_align ">DOWNLOAD NOW</div>
-              </div>
-            </div>
-            
-              <div class="float_right width_r2">
-                <i class="fa-brands fa-square-youtube margin_r"></i>
-                <i class="fa-brands fa-facebook-f margin_r"></i>
-                <i class="fa-brands fa-google-plus margin_r"></i>
-                <i class="fa-brands fa-linkedin margin_r"></i>
-                <i class="fa-brands fa-pinterest margin_r"></i>
-                <i class="fa-brands fa-instagram margin_r"></i>
-                <i class="fa-brands fa-twitter "></i>
-              </div>
-            
->>>>>>> 4a62af2bbd149ec6720206b12d96f798610f32d1
-            <div style="clear: both;"></div>
-          </div>
+      <div class="width_a margin_a">
+        <div class="float_left width_left">
+          <img src="img_g.jpeg" alt="Guitar" height="50px" width="15%">
+          <span class="font_size bg_color padding">SoundAMP</span>
         </div>
         <div class="float_right width_right">
-          <div class="float_left width_l2 padding1 ">
-            <div class="font" style="text-align: right;">
-              <a href class="bg_color">HTML Templates</a>
-              <i class="fa-solid fa-caret-down margin_r bg_color"></i>
-              <a href class="bg_color">More HTML Templates</a>
-              <i class="fa-solid fa-caret-down  margin_r bg_color"></i>
-              <div class="button text_align ">DOWNLOAD NOW</div>
+          <div>
+            <div class="float_left width_l2 padding1">
+              <div class="font" style="text-align: right;">
+                <a href class="bg_color txt">HTML Templates</a>
+                <i class="fa-solid fa-caret-down margin_r bg_color"></i>
+                <a href class="bg_color txt">More HTML Templates</a>
+                <i class="fa-solid fa-caret-down  margin_r bg_color"></i>
+              </div>
             </div>
           </div>
-          <div class="float_right width_r2 padding2">
+          <div class="float_right width_r2">
             <i class="fa-brands fa-square-youtube margin_r"></i>
             <i class="fa-brands fa-facebook-f margin_r"></i>
             <i class="fa-brands fa-google-plus margin_r"></i>
@@ -124,7 +83,7 @@
             <div class="font_color">#dj #master-class <br></div>
             <div class="padding6 linespacing font_color">DJ woodsmell will teach you new tricks: please sign up.<br>
             </div>
-            <div class="button1 text_align width_a margin_a margin_3">See more...</div>
+            <div class="button1 text_align width_a margin_a margin_2">See more...</div>
           </div>
         </div>
       </div>
