--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -15,10 +15,15 @@
     <header class="bg_color1">
       <div class="width_a margin_a">
         <div class="float_left width_left">
-          <img src="img_g.jpeg" alt="Guitar" height="50px" width="15%">
-          <span class="font_size bg_color padding">SoundAMP</span>
-        </div>
-        <div class="float_right width_right">
+          <div class="float_left width_l1">
+             <img src="img_g.jpeg" alt="Guitar" height="55px" width="120%">
+          </div>
+          <div class="float_right width_r1">
+            <div class="bg_color font_size padding">SoundAMP</div>
+          </div>
+          <div style="clear: both;"></div>
+       </div>
+        <div class="float_right width_right ">
           <div>
             <div class="float_left width_l2 padding1">
               <div class="font" style="text-align: right;">
@@ -26,10 +31,11 @@
                 <i class="fa-solid fa-caret-down margin_r bg_color"></i>
                 <a href class="bg_color txt">More HTML Templates</a>
                 <i class="fa-solid fa-caret-down  margin_r bg_color"></i>
+                <div class="button font">DOWNLOAD NOW</div>
               </div>
             </div>
           </div>
-          <div class="float_right width_r2">
+          <div class="float_right width_r2 padding2">
             <i class="fa-brands fa-square-youtube margin_r"></i>
             <i class="fa-brands fa-facebook-f margin_r"></i>
             <i class="fa-brands fa-google-plus margin_r"></i>
