--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -13,56 +13,6 @@
 
   <div class="bg_color4 font_f">
     <header class="bg_color1">
-<<<<<<< HEAD
-      <div class="width_a margin_a padding">
-        <div class="float_left width_l1">
-         <div>
-          <div class="float_left width_25">
-            <img src="img_g.jpeg" alt="Guitar" height="50px" width="50%">
-          </div>
-          <div class="float_right width_r1">
-            <div class="font_size bg_color">SoundAMP</div>
-          </div>
-          <div style="clear: both;"></div>
-         </div>
-        </div>
-        <div class="">
-          <div class="float_right width_right">
-            <div class="float_left width_l2">
-              <div class="font" style="text-align: right;">
-                <a href class="bg_color">HTML Templates</a>
-                <i class="fa-solid fa-caret-down margin_r bg_color"></i>
-                <a href class="bg_color">More HTML Templates</a>
-                <i class="fa-solid fa-caret-down  margin_r bg_color"></i>
-                <div class="button text_align ">DOWNLOAD NOW</div>
-              </div>
-            </div>
-            
-              <div class="float_right width_r2">
-                <i class="fa-brands fa-square-youtube margin_r"></i>
-                <i class="fa-brands fa-facebook-f margin_r"></i>
-                <i class="fa-brands fa-google-plus margin_r"></i>
-                <i class="fa-brands fa-linkedin margin_r"></i>
-                <i class="fa-brands fa-pinterest margin_r"></i>
-                <i class="fa-brands fa-instagram margin_r"></i>
-                <i class="fa-brands fa-twitter "></i>
-              </div>
-            
-            <div style="clear: both;"></div>
-          </div>
-        </div>
-        <!-- <div class="float_right width_right">
-          <div class="float_left width_l2 padding1 ">
-            <div class="font" style="text-align: right;">
-              <a href class="bg_color">HTML Templates</a>
-              <i class="fa-solid fa-caret-down margin_r bg_color"></i>
-              <a href class="bg_color">More HTML Templates</a>
-              <i class="fa-solid fa-caret-down  margin_r bg_color"></i>
-              <div class="button text_align ">DOWNLOAD NOW</div>
-            </div>
-          </div> -->
-          <!-- <div class="float_right width_r2 padding2">
-=======
       <div class="width_a margin_a">
         <div class="float_left width_left">
           <img src="img_g.jpeg" alt="Guitar" height="50px" width="15%">
@@ -76,11 +26,11 @@
                 <i class="fa-solid fa-caret-down margin_r bg_color"></i>
                 <a href class="bg_color txt">More HTML Templates</a>
                 <i class="fa-solid fa-caret-down  margin_r bg_color"></i>
+                <a type="button" href="" class="txt">Download Now</a>
               </div>
             </div>
           </div>
           <div class="float_right width_r2">
->>>>>>> 95165447ddbc5bc44f4d31740c1388924a02b6ba
             <i class="fa-brands fa-square-youtube margin_r"></i>
             <i class="fa-brands fa-facebook-f margin_r"></i>
             <i class="fa-brands fa-google-plus margin_r"></i>
