--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -11,23 +11,23 @@
 
 <body>
 
-  <div class="bg_color4 font_f">
+  <div class="bg_color3 font_f">
     <header class="bg_color1">
-      <div class="width_a margin_a padding">
-        <div class="float_left width_l1">
+      <div class="width_a margin_a">
+        <div class="float_left width_left">
           <div>
-            <div class="float_left width_25">
-              <img src="img_g.jpeg" alt="Guitar" height="50px" width="50%">
+            <div class="float_left width_l1 padding">
+              <img src="img_g.jpeg" alt="Guitar" height="55px" width="130%">
             </div>
             <div class="float_right width_r1">
-              <div class="font_size bg_color">SoundAMP</div>
+              <div class="font_size bg_color padding1">SoundAMP</div>
             </div>
             <div style="clear: both;"></div>
           </div>
         </div>
         <div class="">
-          <div class="float_right width_right">
-            <div class="float_left width_l2">
+          <div class="float_right width_right ">
+            <div class="float_left width_l2 padding2">
               <div class="font" style="text-align: right;">
                 <a href class="bg_color">HTML Templates</a>
                 <i class="fa-solid fa-caret-down margin_r bg_color"></i>
@@ -37,7 +37,7 @@
               </div>
             </div>
 
-            <div class="float_right width_r2">
+            <div class="float_right width_r2 padding3">
               <i class="fa-brands fa-square-youtube margin_r"></i>
               <i class="fa-brands fa-facebook-f margin_r"></i>
               <i class="fa-brands fa-google-plus margin_r"></i>
@@ -54,69 +54,72 @@
         <div style="clear: both;"></div>
       </div>
       <div style="clear: both;"></div>
-  </div>
+  
   </header>
-  <div class="width_b margin_a">
-    <div class="bg_image text_align1 bg_color ">
-      <h1 class="margin_r2 padding7 font_size3">ALL EVENT</h1>
-    </div>
-  </div>
-  <div class=" width_b  margin_a">
-    <div class="float_left width_l3 margin_r3">
-      <div class="margin border bg_color2">
-        <img src="img_1.jpeg" alt="night laser" height="200px" width="100%">
-        <div class="width_c margin_a padding5  ">
-          <div class="font_color">10/05/2018 <br></div>
-          <div class="font_size2 padding6">Night Laser Show <br></div>
-          <div class="font_color">#hip-hop #rnb #dance <br></div>
-          <div class="padding6 linespacing font_color">We are happy to announce tis
-            special laser show.<br></div>
-          <div class="button1 text_align width_a margin_a margin_2">See more...</div>
-        </div>
+  <div>
+    <div class="width_b margin_a">
+      <div class="bg_image text_align1 bg_color ">
+        <h1 class="margin_r2 padding7 font_size3">ALL EVENT</h1>
       </div>
     </div>
-    <div class="float_left width_l3 margin_r3">
-      <div class="margin border bg_color2">
-        <img src="img_2.jpeg" alt="live music" height="200px" width="100%">
-        <div class="width_c margin_a padding5 ">
-          <div class="font_color">14/05/2018 <br></div>
-          <div class="font_size2 padding6">Live music <br></div>
-          <div class="font_color">#live #rock #alternative <br></div>
-          <div class="padding6 linespacing font_color">special events for our rock fans! live music show. <br></div>
-          <div class="button1 text_align width_a margin_a margin_2">See more...</div>
-        </div>
-      </div>
-    </div>
-    <div class="float_left width_l3 margin_r3">
-      <div class="margin border bg_color2">
-        <img src="img_3.jpeg" alt="Master class" height="200px" width="100%">
-        <div class="width_c margin_a padding5 ">
-          <div class="font_color">10/04/2018 <br></div>
-          <div class="font_size2 padding6">DJ-Master Class <br></div>
-          <div class="font_color">#dj #master-class <br></div>
-          <div class="padding6 linespacing font_color">DJ woodsmell will teach you new tricks: please sign up.<br>
+    <div class=" width_b  margin_a">
+      <div class="float_left width_l3 margin_r3">
+        <div class="margin border bg_color2">
+          <img src="img_1.jpeg" alt="night laser" height="200px" width="100%">
+          <div class="width_c margin_a padding5  ">
+            <div class="font_color">10/05/2018 <br></div>
+            <div class="font_size2 padding6">Night Laser Show <br></div>
+            <div class="font_color">#hip-hop #rnb #dance <br></div>
+            <div class="padding6 linespacing font_color">We are happy to announce tis
+              special laser show.<br></div>
+            <div class="button1 text_align width_a margin_a margin_2">See more...</div>
           </div>
-          <div class="button1 text_align width_a margin_a margin_2">See more...</div>
         </div>
       </div>
-    </div>
-    <div class="float_right width_l3">
-      <div class=" margin border bg_color2">
-        <img src="img_4.jpeg" alt="night party" height="200px" width="100%">
-        <div class="width_c margin_a padding5">
-          <div class="font_color">10/04/2018 <br></div>
-          <div class="font_size2 padding6">Best Night Party <br></div>
-          <div class="font_color">#party #club <br></div>
-          <div class="padding6 linespacing font_color">Our treditional event: best hits all night long. <br></div>
-          <div class="button1 text_align width_a margin_a margin_2">See more...</div>
+      <div class="float_left width_l3 margin_r3">
+        <div class="margin border bg_color2">
+          <img src="img_2.jpeg" alt="live music" height="200px" width="100%">
+          <div class="width_c margin_a padding5 ">
+            <div class="font_color">14/05/2018 <br></div>
+            <div class="font_size2 padding6">Live music <br></div>
+            <div class="font_color">#live #rock #alternative <br></div>
+            <div class="padding6 linespacing font_color">special events for our rock fans! live music show. <br></div>
+            <div class="button1 text_align width_a margin_a margin_2">See more...</div>
+          </div>
         </div>
       </div>
+      <div class="float_left width_l3 margin_r3">
+        <div class="margin border bg_color2">
+          <img src="img_3.jpeg" alt="Master class" height="200px" width="100%">
+          <div class="width_c margin_a padding5 ">
+            <div class="font_color">10/04/2018 <br></div>
+            <div class="font_size2 padding6">DJ-Master Class <br></div>
+            <div class="font_color">#dj #master-class <br></div>
+            <div class="padding6 linespacing font_color">DJ woodsmell will teach you new tricks: please sign up.<br>
+            </div>
+            <div class="button1 text_align width_a margin_a margin_2">See more...</div>
+          </div>
+        </div>
+      </div>
+      <div class="float_right width_l3">
+        <div class=" margin border bg_color2">
+          <img src="img_4.jpeg" alt="night party" height="200px" width="100%">
+          <div class="width_c margin_a padding5">
+            <div class="font_color">10/04/2018 <br></div>
+            <div class="font_size2 padding6">Best Night Party <br></div>
+            <div class="font_color">#party #club <br></div>
+            <div class="padding6 linespacing font_color">Our treditional event: best hits all night long. <br></div>
+            <div class="button1 text_align width_a margin_a margin_2">See more...</div>
+          </div>
+        </div>
+      </div>
+      <div style="clear: both;"></div>
+      <div class="margin_bottom"></div>
     </div>
-    <div style="clear: both;"></div>
-    <div class="margin_bottom"></div>
   </div>
   </div>
-  </div>
+</div>
 </body>
 
 </html>
+</div>
