--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -28,9 +28,9 @@
           <div class="float_right width_right ">
             <div class="float_left width_l2 padding2">
               <div class="font" style="text-align: right;">
-                <a href class="bg_color">HTML Templates</a>
+                <a href class="bg_color txt">HTML Templates</a>
                 <i class="fa-solid fa-caret-down margin_r bg_color"></i>
-                <a href class="bg_color">More HTML Templates</a>
+                <a href class="bg_color txt">More HTML Templates</a>
                 <i class="fa-solid fa-caret-down  margin_r bg_color"></i>
                 <div class="button text_align ">DOWNLOAD NOW</div>
               </div>
