--- a/abinash/template_5(1)/Task_7/index.html
+++ b/abinash/template_5(1)/Task_7/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="bg_color1">
-        <div class="width_a margin">
+        <div class="">
             <div class="font_s1 padding1 font_color">Your Logo
                 <span class="font_s2 font_c3">Using a single layout to create several different looks</span>
             </div>
