--- a/sarupriya/JavaScript/index.html
+++ b/sarupriya/JavaScript/index.html
@@ -45,3 +45,14 @@
 </body>
 
 </html>
+<!-- 
+    firstname
+    lastname
+    registernumber
+    gender
+    dob
+    doj
+    address
+    hobbies
+    department
+ -->
