--- a/vigneshwaran/float/new.html
+++ b/vigneshwaran/float/new.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" href="./new1.css"/>
 </head>
 <body>
-    <div class="baground">
-    <div class="text margin padding border">Header</div>
+    
+    <div class="text margin padding border baground">Header</div>
     <div class="margin">
         <div class="float-left width-left">
-            <div class="text padding-left border">Side bar</div>
+            <div class="text padding-left border baground">Side bar <br> <span>270 X 930</span></div>
+           
         </div>
         <div class="float-right width-right">
-            <div class="text padding-right border">Content</div>
+            <div class="text padding-right border baground">Content</div>
         </div>
+        <div style="clear: both;"></div>
     </div>
-    <div style="clear: both;"></div>
-    <div class="text margin padding border">Footer</div>
+   
+    <div class="text margin padding border baground">Footer <span>400 x500</span></div>
     </div>
 </body>
 </html>
