--- a/vigneshwaran/flo/fl.html
+++ b/vigneshwaran/flo/fl.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./flc.css"/>
 </head>
 <body>
-        <div class="text margin padding border bg-color font">Header<br>980x140</div>
+        <div class="text margin padding border bg-color font">Header<br><span class="font1">980x140</span></div>
     <div class="margin">
         <div class="float-l width-l">
             <div class="text margin padding2 border bg-color font">Side Bar<br>270x450</div>
