--- a/vigneshwaran/table/tab.html
+++ b/vigneshwaran/table/tab.html
@@ -7,17 +7,25 @@
     <link rel="stylesheet" href="tab.css"/>
 </head>
 <body>
-    <div>
-        <div class="text">
+    <div class="margin">
+        <div class="text bg">
             <div class="padding border color">Header</div>
             <div class="padding border color1">Nav</div>
             <div class="wfl">
-                <div class="padding border color3">Section
-                    <div class="border1 color4">Article
-                        <div class="border2 color">header
-                            <div class="border2 color2">P</div>
+                <div class="padding0 color3">Section
+                    <div class="border1 color4 width padding0">Article
+                        <div class="border2 color width">header
+                            <div class="border2 color2 wi padding">P</div>
                         </div>
                     </div>
+                    <br>
+                    <span>
+                        <div class="border1 color4 width padding0">Article
+                        <div class="border2 color width">header
+                            <div class="border2 color2 wi padding">P</div>
+                        </div>
+                    </div>
+                    </span>
                 </div>
             </div>
             <div class="wfr">
