--- a/vigneshwaran/table/tab.html
+++ b/vigneshwaran/table/tab.html
@@ -7,7 +7,35 @@
     <link rel="stylesheet" href="tab.css"/>
 </head>
 <body>
-    <div class="margin">
+    <div class="width_main text">
+        <div class="padding border color">Header</div>
+            <div class="padding border color1">Nav</div>
+            <div class="wfl border">
+                <div class="padding0 color3">Section</div>
+                    <div class="border1 color4 width padding0">Article</div>
+                        <div>
+                            <div class="border2 color width">header
+                                <div class="border2 color2 wi padding">P</div>
+                        </div>
+                        
+                    </div>
+                    <br>
+                    <span>
+                        <div class="border1 color4 width padding0">Article
+                        <div class="border2 color width">header
+                            <div class="border2 color2 wi padding">P</div>
+                        </div>
+                    </div>
+                    </span>
+                </div>
+            </div>
+            <div class="wfr">
+            <div class="padding1 color2">Aside</div>
+            </div>
+            <div style="clear: both;"></div>
+            <div class="padding border color">Footer</div>
+    </div>
+    <!-- <div class="margin">
         <div class="text bg">
             <div class="padding border color">Header</div>
             <div class="padding border color1">Nav</div>
@@ -34,6 +62,6 @@
             <div style="clear: both;"></div>
             <div class="padding border color">Footer</div>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
