--- a/sarupriya/JavaScript/index.html
+++ b/sarupriya/JavaScript/index.html
@@ -9,30 +9,31 @@
     <script src="https://kit.fontawesome.com/a7222674db.js" crossorigin="anonymous"></script>
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script1.js"></script>
 </head>
 
 <body>
-    <div class="bg_a text text-white p-5 txtalign">
-        <h1 class="p-5">Validation Form</h1>
+    <div class="bg_a color p-5 font_f">
+        <h1 class="p-5 txtalign color_a">Validation Form</h1>
         <form>
-            <div class="container">
-                <form action="/">
+            <div class="container width">
+                <form method="post" action="/">
                     <div class="p-3">
                         <label for="fname">First Name</label>
                         <div>
-                            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                            <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
                         </div>
                     </div>
                     <div class="p-3">
                         <label for="lname">Last Name</label>
                         <div>
-                            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                            <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
                         </div>
                     </div>
                     <div class="p-3">
                         <label for="dob">Date of Birth</label>
                         <div>
-                            <input type="text" id="dob" name="dobdate" placeholder="Your dob..">
+                            <input type="date" id="dob" name="dobdate" placeholder="Your dob.." required>
                         </div>
                     </div>
                     <div class="p-3">
@@ -44,19 +45,35 @@
                     <div class="p-3">
                         <label for="doj">Date of Joining</label>
                         <div>
-                            <input type="text" id="doj" name="dojdate" placeholder="Your joining date..">
+                            <input type="date" id="doj" name="dojdate" placeholder="Your joining date.." required>
                         </div>
                     </div>
                     <div class="p-3">
                         <label for="dept">Department</label>
                         <div>
-                            <input type="text" id="dept" name="depatment" placeholder="Your department..">
+                            <select name="option" id="dept" required>
+                                <option class="bg_b">---select---</option>
+                                <option>Marketing</option>
+                                <option>Developer</option>
+                                <option>Production dept</option>
+                                <option>Sales dept</option>
+                                <option>Manufacturing dept</option>
+                                <option>HR</option>
+                            </select>
                         </div>
                     </div>
-                    <div class="p-3">
-                        <label for="hob">Hobbies</label>
-                        <div>
-                            <input type="text" id="hob" name="hobbies" placeholder="Your hobbies..">
+                    <div class="row p-5">
+                        <div class="col-md-6 col-sm-12">
+                            <div>
+                                <input type="submit" id="sumbit" class="btn btn-danger" onclick="returnCall()"
+                                    value="Submit">
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-12">
+                            <div>
+                                <input type="reset" id="reset" class="btn btn-danger"
+                                    value="Reset">
+                            </div>
                         </div>
                     </div>
                 </form>
