--- a/vigneshwaran/table/ind.html
+++ b/vigneshwaran/table/ind.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSK</title>
-    <link rel="stylesheet" href="./ind.css"/>
+    <link rel="stylesheet" href="./ind.css" />
 </head>
+
 <body>
     <div class="margin">
-        <div class=" text width bg-color">
+        <div class=" text bg-color">
             <div class="margin1 padding color">Header</div>
             <div class="margin1 padding color1">Navigation</div>
-            <div class="wfl">
-            <div class="padding0 color3">Section
-                <div class="color4 border1 padding0 width">Article
-                    <div class="color border2 width">Header
-                        <div class="color2 border2 padding width0">P</div>
+            <div>
+                <div class="wfl">
+                    <div class="color3 padding0 border2">
+                        <div class="margin">section</div>
+                        <div class="border2 width padding0" style="margin-bottom: 10px;">
+                            <div class="margin">article</div>
+                            <div class="border2 width">
+                                <div style="border-bottom: 1px solid black;">header</div>
+                                <div style="padding-bottom: 20px;">p</div>
+                            </div>
+                        </div>
+                        <div class="border2 width padding0">
+                            <div class="margin">article</div>
+                            <div class="border2 width">
+                                <div style="border-bottom: 1px solid black;">header</div>
+                                <div style="padding-bottom: 20px;">p</div>
+                            </div>
+                        </div>
+                       
                     </div>
-                </div>    
-                <br>
-                <span>
-                <div class="color4 border1 padding0 width">Article
-                    <div class="color border2 width">Header
-                        <div class="color2 border2 padding width0">P</div>
-                    </div>
-                    </div>
-                </span>
+                </div>
+                <div>
+                    <div></div>
                 </div>
             </div>
-            <div class="wfr">
-            <div class="padding1 color2">Aside</div>
-            </div>
-            <div style="clear: both;"></div>
-            <div class="margin1 padding color">Footer</div>
         </div>
-    </div>
 </body>
+
 </html>
