--- a/vigneshwaran/table/tab.html
+++ b/vigneshwaran/table/tab.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="tab.css"/>
 </head>
 <body>
-    <div class="width_main text">
+    <!--<div class="width_main text">
         <div class="padding border color">Header</div>
             <div class="padding border color1">Nav</div>
             <div class="wfl border">
@@ -34,8 +34,8 @@
             </div>
             <div style="clear: both;"></div>
             <div class="padding border color">Footer</div>
-    </div>
-    <!-- <div class="margin">
+    </div> -->
+     <div class="margin">
         <div class="text bg">
             <div class="padding border color">Header</div>
             <div class="padding border color1">Nav</div>
@@ -62,6 +62,6 @@
             <div style="clear: both;"></div>
             <div class="padding border color">Footer</div>
         </div>
-    </div> -->
+    </div>
 </body>
 </html>
