--- a/vigneshwaran/flo/v.html
+++ b/vigneshwaran/flo/v.html
@@ -9,24 +9,22 @@
 <body>
     <div class="text margin">
         <div class="padding margin1 color">header</div>
-        <div class="padding margin1 color1">nav</div>
+        <div class="padding margin7 color1">nav</div>
         <div class="wfl">
-            <div class="color3 border padding">
+            <div class="color3 padding">
                 <div class="margin5">section</div>
             <div class="color4 margin2 border margin5 padding">
                 <div class="margin5">article</div>
             <div class="margin3 border margin2">
-                <div class="color border2">header
-                    <div class="color2 padding border1">p</div>
-                </div>
+                <div class="color border2">header</div>
+                    <div class="color2 padding">p</div>              
             </div>
             </div>
             <div class="color4 margin2 border margin5 padding">
                 <div class="margin5">article</div>
             <div class="margin3 border margin2">
-                <div class="color border2">header
-                    <div class="color2 padding border1">p</div>
-                </div>
+                <div class="color border2">header</div>
+                    <div class="color2 padding">p</div>               
             </div>
             </div>
             </div>
