--- a/vigneshwaran/flo/v.html
+++ b/vigneshwaran/flo/v.html
@@ -16,17 +16,17 @@
             <div class="color4 margin2 border margin5 padding">
                 <div class="margin5">article</div>
             <div class="margin3 border margin2">
-                <div class="color border2">header
-                    <div class="color2 padding border1">p</div>
-                </div>
+                <div class="color border2">header</div>
+                    <div class="color2 padding ">p</div>
+                
             </div>
             </div>
             <div class="color4 margin2 border margin5 padding">
                 <div class="margin5">article</div>
             <div class="margin3 border margin2">
-                <div class="color border2">header
-                    <div class="color2 padding border1">p</div>
-                </div>
+                <div class="color border2">header</div>
+                <div class="color2 padding ">p</div>         
+                
             </div>
             </div>
             </div>
